uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: uptime-kuma
    kustomize.toolkit.fluxcd.io/force: enabled
  name: deployment
  namespace: uptime-kuma
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  replicas: 1
  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.23.15
          ports:
            - containerPort: 3001
          volumeMounts:
            - mountPath: /app/data
              name: data-storage
          livenessProbe:
            httpGet:
              path: /
              port: 3001
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: 3001
              scheme: HTTP

      volumes:
        - name: data-storage
          nfs:
            server: diskstation.${homedomain:=undefined}
            path: /volume1/kubernetes-nfs/uptime-kuma
            readOnly: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
spec:
  ingressClassName: traefik
  rules:
  - host: uptime.${clusterdomain:=undefined}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
---
apiVersion: v1
kind: Service
metadata:  
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
spec:
  selector:    
    app.kubernetes.io/name: uptime-kuma
  ports:  
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
