uptime-kuma/ingress-external.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  name: uptime-internal
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  ingressClassName: traefik
  rules:
  - host: uptime.${topleveldomain:=undefined}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  name: uptime-external
  namespace: uptime-kuma
  labels:
    app: whoami
spec:
  ingressClassName: traefik-external
  rules:
  - host: uptime.${topleveldomain:=undefined}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-ingress-https
            port:
              number: 443
---
kind: Service
apiVersion: v1
metadata:
  name: node-ingress-https
  namespace: uptime-kuma
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: uptime-kuma-node-ingress-https@kubernetescrd
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
---
kind: Endpoints
apiVersion: v1
metadata:
  name: node-ingress-https
  namespace: uptime-kuma
subsets:
  - addresses:
      - ip : 192.168.1.20
    ports:
      - port: 443
